--- a/bio.html
+++ b/bio.html
@@ -61,6 +61,19 @@
                     <div class="col-lg-12">
                         <h1>Mohamed Abdi-Biography</h1>                        
                       <hr>
+     <!-Beginning of Media Top-->
+     <div class="media">
+    <div class="media-left media-top">
+      <img src="img_avatar1.png" class="media-object" style="width:80px">
+    </div>
+    <div class="media-body">
+      <h4 class="media-heading">Media Top</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+  </div>
+       <!-End of Media Object-->
                         
 
                        
