--- a/bio.html
+++ b/bio.html
@@ -62,6 +62,16 @@
                         <h1>Mohamed Abdi-Biography</h1>                        
                       <hr>
      <!--Beginning of Media Top-->
+                        <div class="media">
+    <div class="media-left">
+      <img src="img_avatar1.png" class="media-object" style="width:60px">
+    </div>
+    <div class="media-body">
+      <h4 class="media-heading">Left-aligned</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+  </div>
+  <hr>
     
        <!--End of Media Object-->
                         
