--- a/bio.html
+++ b/bio.html
@@ -64,11 +64,11 @@
      <!--Beginning of Media Top-->
                         <div class="media">
     <div class="media-left">
-      <img src="img_avatar1.png" class="media-object" style="width:60px">
+      <img src="C:\Users\mkabd\OneDrive\Documents\GitHub\personal3\images/carousel1.jpg" class="media-object" style="width:250px">
     </div>
     <div class="media-body">
-      <h4 class="media-heading">Left-aligned</h4>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <h4 class="media-heading">St. Louis</h4>
+      <p>I live in the city of Saint Louis. This is a picture of the 630-foot tall Gateway Arch in Downtown Saint Louis.</p>
     </div>
   </div>
   <hr>
