--- a/bio.html
+++ b/bio.html
@@ -64,7 +64,7 @@
      <!--Beginning of Media Top-->
                         <div class="media">
     <div class="media-left">
-      <img src="C:\Users\mkabd\OneDrive\Documents\GitHub\personal3\images/carousel1.jpg" class="media-object" style="width:250px">
+      <img src="https://static.pexels.com/photos/22566/pexels-photo.jpg" class="media-object" style="width:250px">
     </div>
     <div class="media-body">
       <h4 class="media-heading">St. Louis</h4>
