--- a/bio.html
+++ b/bio.html
@@ -68,7 +68,7 @@
     </div>
     <div class="media-body">
       <h4 class="media-heading">St. Louis</h4>
-      <p>I live in the city of Saint Louis. This is a picture of the 630-foot tall Gateway Arch in Downtown Saint Louis.</p>
+      <p style="padding-right:10px;">I live in the city of Saint Louis. This is a picture of the 630-foot tall Gateway Arch in Downtown Saint Louis.</p>
     </div>
   </div>
   
