--- a/bio.html
+++ b/bio.html
@@ -81,7 +81,7 @@
     </div>
     <div class="media-body">
       <h4 class="media-heading">My Favorite Sport is Basketball</h4>
-      <p>The San Antonio Spurs were founded in 1967. The team colors are black, silver and white. They have won five championships. The fourth most in NBA history.</p>
+      <p style="padding-right:10px;">The San Antonio Spurs were founded in 1967. The team colors are black, silver and white. They have won five championships. The fourth most in NBA history.</p>
     </div>
   </div>
   <!--End of second Media Top-->
