--- a/bio.html
+++ b/bio.html
@@ -96,6 +96,7 @@
     </div> 
   </div>
   <hr>
+     <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>                   
   <!--End of third Media Top-->
                         
 
