--- a/bio.html
+++ b/bio.html
@@ -92,7 +92,7 @@
     </div>
     <div class="media-body">
       <h4 class="media-heading">My Second Favorite Basketball Team</h4>
-      <p style="padding-right:10px;">The Golden State Warriors are based in Oakland, California. They were founded in 1946. The team colors are royal blue, California golden yellow, slate and white. They have won championships.</p>
+      <p style="padding-right:10px;">The Golden State Warriors are based in Oakland, California. They were founded in 1946. The team colors are royal blue, California golden yellow, slate and white. They have won four championships.</p>
     </div> 
   </div>
   <hr>
